--- a/11millioncrafts/backend/package.json
+++ b/11millioncrafts/backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.8.3"
   }
 }
